# pyconph-2023

./: .gitignore  CNAME  Dockerfile  README.md  code-of-conduct.html  covid-policy.html  docker-compose.yml  everyone-who-can-pays.html  index.html  package-lock.json  package.json  patrons.html  pyproject.toml  requirements.txt  sponsorship.html  tailwind.config.js  volunteers.html
.github/workflows/: main.yml
COVID Policy_files/: app.js
Everyone who can_files/: banner.css  navbar.css  styles.css  tooltip.css
PyCon PH 2023_files/: styles.css
PyCon PH 2023_files/static/css/: banner.css  navbar.css
Sponsorship_files/: navbar.js
config/: urls.py  wsgi.py
config/settings/: base.py  production.py
config/static/css/: app.css  pycon.css  splide.min.css  styles.css
config/static/js/: app.js
config/templates/: base.html  footer-slim.html  footer.html
pyconph/: manage.py
pyconph/content/: apps.py  models.py
pyconph/content/migrations/: 0001_initial.py
pyconph/home/: models.py
pyconph/home/migrations/: 0003_homepage_date_end_homepage_date_start_and_more.py  0004_add_banner.py  0005_pagecontent_is_subcontent.py  0006_homepage_cfp_link_homepage_sponsor_link.py
pyconph/home/static/css/: menu.css  (+3 more)
pyconph/presentations/: admin.py  apps.py  models.py
pyconph/presentations/migrations/: 0001_initial.py  0002_alter_speaker_options_speaker_introduction_and_more.py
pyconph/pyconph/: wsgi.py
pyconph/pyconph/settings/: base.py  dev.py
pyconph/pyconph/templates/: base.html
pyconph/sponsors/: admin.py  apps.py  models.py
static/css/: styles.css
(+20 files in other folders)
