[tool.poetry]
name = "pyconph"
version = "0.1.0"
description = ""
authors = ["Zorex <zorex@brokerengine.com.au>"]

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^3.0.1"
sentry-sdk = "^1.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
