[tool.poetry]
name = "pyconph"
version = "0.1.0"
description = ""
authors = ["Zorex <zorex@brokerengine.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.2.2"
sentry-sdk = "^1.30.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-compressor = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
